# chargepal_local_server

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  pyproject.toml  start_chargepal_dev.sh
docker/: Dockerfile.noetic  supervisord.conf
src/: generate-proto  local_server.py  test_server.py
src/chargepal_local_server/: access_ldb.py  battery_communication.py  communication.proto  create_booking_now.py  create_dummy_mysql.py  create_ldb.py  create_ldb_orders.py  create_pdb.py  create_sample_bookings.py  debug_ldb.py  debug_sqlite_db.py  free_station.py  grid_sim.py  job.py  layout.py  ldb_interfaces.py  local_server.py  loop_demo.py  pdb_interfaces.py  planner.py  read_serialize_ldb.py  reset_dbs  server.py  test_planner.py  test_pscedev.py  text_server_example.py  update_ldb.py  update_pdb.py
src/chargepal_local_server/db/: ldb.db  pdb.db  test_ldb.db
src/chargepal_local_server/logs/: ChargePal1.txt
src/chargepal_local_server/protos/: local_server.proto
src/chargepal_local_server/pscedev/: __init__.py  config.py  interface.py  main.py  scenario.py
tests/: test_pdb.py  test_planner.py  test_server.py
view_local_database/: db.sqlite3  manage.py
view_local_database/local_database/: apps.py  models.py  urls.py  views.py
view_local_database/local_database/migrations/: 0001_initial.py
view_local_database/local_database/templates/local_database/: index.html  tables.html
view_local_database/view_local_database/: asgi.py  settings.py  urls.py  wsgi.py
