[project]
name = "chargepal-local-server"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Alexander Sung", email = "alexander.sung@dfki.de" }
]
dependencies = [
    "pyyaml>=6.0.1",
    "grpcio-tools>=1.62.1",
    "mysql-connector-python>=8.3.0",
    "sqlmodel>=0.0.16",
    "pscedev @ git+https://git.ni.dfki.de/chargepal/system-integration/pscedev.git",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/chargepal_local_server"]
